connection to db

--- a/SocialMedia.Api/appsettings.json
+++ b/SocialMedia.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SocialMedia": "Server={{server}};Database={{database}};User Id={{user}};password={{password}};Trusted_Connection=False;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
