local connection string
SQL Server Auth:
"Server={{server}};Database={{database}};User Id={{user}};password={{password}};Trusted_Connection=False;MultipleActiveResultSets=true"
Windows Auth:
"Server={{server}};Database={{database}};Trusted_Connection=True"

--- a/SocialMedia.Api/appsettings.json
+++ b/SocialMedia.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SocialMedia": "Server={{server}};Database={{database}};User Id={{user}};password={{password}};Trusted_Connection=False;MultipleActiveResultSets=true"
+    "SocialMedia": "Server=.\\SQLEXPRESS;Database=SocialMedia;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
