relocated paged list elements

--- a/SocialMedia.Core/SocialMedia.Core.csproj
+++ b/SocialMedia.Core/SocialMedia.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Entities\Customs\" />
     <Folder Include="Enumerations\" />
   </ItemGroup>
 
